# messenger

./: .version-lock  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  update.html
.github/workflows/: build.yml
public/: update.html
scripts/: version-upgrade.js
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  update.rs
